Edited wiki page through web user interface.

--- a/wiki/BeanSoup.wiki
+++ b/wiki/BeanSoup.wiki
@@ -1,3 +1,5 @@
+#summary Collection of open source SFB components that can do this and that
+
 = Introduction =
 
 Welcome to the !BeanSoup sub project within SOAFaces. !BeanSoup is a collection of SOAFaces Bundles (SFBs). The individual bundles provide sample code for developers wanting to learn the different things you can do SOAFaces and also as a repository for SOAFaces components that developers can contribute to.
