--- a/wiki/SoaFacesRunner.wiki
+++ b/wiki/SoaFacesRunner.wiki
@@ -7,5 +7,4 @@ With SoaFacesRunner you can package up your SFB into a WAR file and deploy to an
 
 
 = Status =
-
-Currently only SOAApplets are supported. In the future you will also be able to create jobs by composing together multiple SOATasklets in a WAR file.
+Planning phase.
