--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -20,5 +20,5 @@ If you do not need to route calls to Mule supported endpoints and you do not wis
   # Add soafaces-services-client.jar to your GWTCompiler's classpath
   # Inherit the `Services.gwt.xml` module in your GWT module file
   # Place soafaces-services-servlet.jar in your webapps `WEB-INF/lib` directory
-  # Add xstream-1.2.2.jar jettison-1.0.1.jar in your webapps `WEB-INF/lib` directory
+  # Add `xstream-1.2.2.jar` and `jettison-1.0.1.jar` in your webapps `WEB-INF/lib` directory
   # If you are using the mule make sure to include any mule dependent jars in your webapps `WEB-INF/lib` directory
