--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -11,8 +11,8 @@ August 16, 2008 - Release notes
 
 || *Download Package* || *Description* ||
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.0.0.zip soafaces-jars-2.0.0.zip] || SOAFaces binary JARs ||
-|| soafaces-src-2.0.0.zip || SOAFaces source ||
-|| soafaces-javadocs-2.0.0.zip || SOAFaces Javadocs ||
-|| beansoup-sfb-2.0.0.zip || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
-|| beansoup-sfb-src-2.0.0.zip || Beansoup sample SFB source code. Sample SFB components ||
-|| universalapp-example-war-2.0.0.zip || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
+|| http://soafaces.googlecode.com/files/soafaces-src-2.0.0.zip soafaces-src-2.0.0.zip] || SOAFaces source ||
+|| http://soafaces.googlecode.com/files/soafaces-javadocs-2.0.0.zip soafaces-javadocs-2.0.0.zip] || SOAFaces Javadocs ||
+|| http://soafaces.googlecode.com/files/beansoup-sfb-2.0.0.zip beansoup-sfb-2.0.0.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
+|| http://soafaces.googlecode.com/files/beansoup-sfb-src-2.0.0.zip beansoup-sfb-src-2.0.0.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| http://soafaces.googlecode.com/files/universalapp-example-war-2.0.0.zip universalapp-example-war-2.0.0.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
