--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -2,11 +2,11 @@
 
 = SOAFaces Release Archive =
 
-== Version 2.0.3 ==
+== Version 2.0.3 Beta ==
 September 14, 2008 - Release notes
 
 
-== Version 2.0.0 ==
+== Version 2.0.0 Beta ==
 July 9, 2008
 
 || *Download Package* || *Description* ||
