--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -10,17 +10,17 @@ This section describes how you can use the *Services* (!UniversalClient) portion
   * Review the sample code in universalapp.war
   * Download and install the necessary soafaces jars and build your own application using the !UniversalClient messaging API
 
-If you want to also access endpoint services that include soafaces endpoints along with Mule endpoints (like JMS, SOAP ...etc) use the jars shown below in your webapp. Note that you will also need to include in your webapp an necessary Mule jars:
+If you want to also access endpoint services that include soafaces endpoints along with Mule endpoints (like JMS, SOAP ...etc) use the jars shown below in your webapp. Note that you will also need to include in your webapp any necessary Mule jars:
   * soafaces-services-client.jar
   * soafaces-services-servlet.jar
 
 If you do not need to route calls to Mule supported endpoints and you do not wish to include the Mule JAR dependencies you can use a stripped down version of the servlet JAR, `soafaces-services-servlet-nomule.jar` that has no mule dependencies or mule support. This will allow you to make !UniversalClient calls to endpoints using the `soafaces://` protocol only.
 
 ===Steps for setting up your webapp to use the !UniversalClient:===
-  # Add soafaces-services-client.jar to your GWTCompiler's classpath
   # Inherit the `Services.gwt.xml` module in your GWT module file
+  # Add soafaces-services-client.jar to your GWTCompiler's classpath when compiling your GWT client to javascript
   # Place soafaces-services-servlet.jar in your webapps `WEB-INF/lib` directory
-  # Add `xstream-1.2.2.jar` and `jettison-1.0.1.jar` in your webapps `WEB-INF/lib` directory
+  # Add `gwt-servlet-1.5.2.jar`, `xstream-1.2.2.jar` and `jettison-1.0.1.jar` in your webapps `WEB-INF/lib` directory
   # If you are using the mule make sure to include any mule dependent jars in your webapps `WEB-INF/lib` directory
 
 ===Invoking !UniversalClient Services===
@@ -41,4 +41,3 @@ The !UniversalClient send method lets you invoke virtually any method using a si
 || Collections || Map, List, Set are supported ||
 || JSONObject || JSON is a convenient way to pass objects that do not support !IsSerializable ||
 || Multiple arguments || A method that requires multiple arguments can be sent using Object[] ||
-
