--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -3,7 +3,15 @@
 = SOAFaces Release Archive =
 
 == Version 2.0.3 Beta ==
-September 14, 2008 - Release notes
+September 11, 2008 - [ReleaseNotes2 Release Notes]
+
+|| *Download Package* || *Description* ||
+|| [http://soafaces.googlecode.com/files/soafaces-jars-2.0.3.zip soafaces-jars-2.0.3.zip] || SOAFaces binary JARs ||
+|| [http://soafaces.googlecode.com/files/soafaces-src-2.0.3.zip soafaces-src-2.0.3.zip] || SOAFaces source ||
+|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.0.3.zip soafaces-javadocs-2.0.3.zip] || SOAFaces Javadocs ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.0.3.zip beansoup-sfb-2.0.3.zip] || Beansoup compiled sample SFB components. Unzip and use SFBs in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.0.3.zip beansoup-sfb-src-2.0.3.zip] || Beansoup sample SFB source code. Sample SFB components ||
+|| [http://soafaces.googlecode.com/files/universalapp-example-war-2.0.3.zip universalapp-example-war-2.0.3.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
 
 == Version 2.0.0 Beta ==
