--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -3,7 +3,7 @@
 = SOAFaces Release Archive =
 
 == Version 2.0.3 Beta ==
-September 11, 2008 - [ReleaseNotes2 Release Notes]
+September 11, 2008 - [http://soafaces.googlecode.com/files/release_notes-2.0.3.html Release Notes]
 
 || *Download Package* || *Description* ||
 || [http://soafaces.googlecode.com/files/soafaces-jars-2.0.3.zip soafaces-jars-2.0.3.zip] || SOAFaces binary JARs ||
