--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -36,7 +36,7 @@ The !UniversalClient send method lets you invoke virtually any method using a si
 
 || *Supported Argument Types* || *Description* ||
 || Standard Java types || For example String, Integer, int and any GWT supported serialized type can be sent as a single argument ||
-|| IsSeralizable || User defined types that support IsSerializable ||
+|| !IsSeralizable || User defined types that support !IsSerializable ||
 || Arrays || Arrays of !IsSeralizable or Java standard types ||
 || Collections || Map, List, Set are supported ||
 || JSONObject || JSON is a convenient way to pass objects that do not support !IsSerializable ||
