Edited wiki page through web user interface.

--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -41,3 +41,13 @@ The !UniversalClient send method lets you invoke virtually any method using a si
 || Collections || Map, List, Set are supported ||
 || JSONObject || JSON is a convenient way to pass objects that do not support !IsSerializable ||
 || Multiple arguments || A method that requires multiple arguments can be sent using Object[] ||
+
+Types of that can be returned from a service call:
+
+|| *Supported Return Types* || *Description* ||
+|| Standard Java types || For example String, Integer, int and any GWT supported serialized type can be sent as a single argument ||
+|| !IsSeralizable || User defined types that support !IsSerializable ||
+|| Arrays || Arrays of !IsSeralizable or Java standard types ||
+|| Collections || Map, List, Set are supported ||
+|| JSONObject || JSON is a convenient way to pass objects that do not support !IsSerializable ||
+|| Multiple arguments || A method that requires multiple arguments can be sent using Object[] ||
