--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -35,20 +35,22 @@ This send method can invoke Mule endpoints or soafaces endpoints. For example wh
 The !UniversalClient send method lets you invoke virtually any method using a simple approach similar to that used by MuleClient. Multiple arguments must be wrapped in an `Object[]` and passed as the payload. Here are the different options for passing parameters to a method or services using send:
 
 || *Supported Argument Types* || *Description* ||
-|| Standard Java types || For example String, Integer, int and any GWT supported serialized type can be sent as a single argument ||
+|| Void argument || Can call methods/services that take no arguments ||
+|| Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single argument ||
 || !IsSeralizable || User defined types that support !IsSerializable ||
-|| Arrays Serializable || Arrays of Serializable or Java standard types (one and two dimensional arrays supported) ||
-|| Arrays !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
+|| Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
+|| Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
-|| JSONObject || JSON is a convenient way to pass objects that do not support !IsSerializable ||
+|| JSONObject || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object ||
 || Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments ||
 
 Types of that can be returned from a service call:
 
 || *Supported Return Types* || *Description* ||
-|| Standard Java types || For example String, Integer, int and any GWT supported serialized type can be sent as a single argument ||
+|| Void || Return Void ||
+|| Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single argument ||
 || !IsSeralizable || User defined types that support !IsSerializable ||
-|| Arrays Serializable || Arrays of Serializable or Java standard types (one and two dimensional arrays supported) ||
-|| Arrays !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
+|| Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
+|| Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
-|| JSONObject || JSON is a convenient way to pass objects that do not support !IsSerializable ||
+|| JSONValue || Return object from server will be converted JSON and then represented as a JSONValue in GWT async callback ||
