--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -32,7 +32,7 @@ UniversalClient.send(String endpointURI, Object payload, UniversalClientPOJOCall
 
 This send method can invoke Mule endpoints or soafaces endpoints. For example when invoking a soafaces endpoint (using `soafaces://') you are actually invoking a remote method. This method can have zero or more arguments and can return a result (or Void).
 
-The !UniversalClient `send` method lets you invoke virtually any method using a simple approach similar to that used by MuleClient. Multiple arguments must be wrapped in an `Object[]` and passed as the payload. Here are the different options for passing parameters to a method or services using send:
+The !UniversalClient `send` method lets you invoke virtually any method using a simple approach similar to that used by !MuleClient. Multiple arguments must be wrapped in an `Object[]` and passed as the payload. Here are the different options for passing parameters to a method or services using send:
 
 || *Supported Argument Types* || *Description* ||
 || Void argument || Can call methods/services that take no arguments ||
@@ -41,7 +41,7 @@ The !UniversalClient `send` method lets you invoke virtually any method using a 
 || Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
 || Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
-|| JSONObject || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object ||
+|| JSONObject || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object and passed to the service or method being invoked. ||
 || Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments. Any combination of the previous types shown in this table can be wrapped in Object[] ||
 
 Types of that can be returned from a service call:
@@ -53,4 +53,4 @@ Types of that can be returned from a service call:
 || Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
 || Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
-|| JSONValue || Return object from server will be converted JSON and then represented as a JSONValue in GWT async callback ||
+|| JSONValue || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback ||
