Edited wiki page through web user interface.

--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -41,7 +41,7 @@ The !UniversalClient `send` method lets you invoke virtually any method using a 
 || Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
 || Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
-|| JSONObject || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object and passed to the service or method being invoked. ||
+|| JSON (JSONObject) || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object and passed to the service or method being invoked. ||
 || Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments. Any combination of the previous types shown in this table can be wrapped in Object[] ||
 
 Types of that can be returned from a service call:
@@ -53,4 +53,4 @@ Types of that can be returned from a service call:
 || Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
 || Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
-|| JSONValue || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback ||
+|| JSON (JSONValue) || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback ||
