--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -38,8 +38,8 @@ The !UniversalClient `send` method lets you invoke virtually any method using a 
 || Void argument || Can call methods/services that take no arguments ||
 || Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single argument ||
 || !IsSeralizable || User defined types that support !IsSerializable ||
-|| Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
-|| Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
+|| Arrays (primitives) || Arrays of built in Java types (one and two dimensional arrays supported) ||
+|| Arrays !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
 || JSON (JSONObject) || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object and passed to the service or method being invoked. ||
 || Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments. Any combination of the previous types shown in this table can be wrapped in Object[] ||
@@ -50,7 +50,7 @@ Types of that can be returned from a service call:
 || Void || Return Void ||
 || Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single argument ||
 || !IsSeralizable || User defined types that support !IsSerializable ||
-|| Array || Arrays of built in Java types (one and two dimensional arrays supported) ||
-|| Array !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
+|| Arrays (primitives) || Arrays of built in Java types (one and two dimensional arrays supported) ||
+|| Arrays !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
 || Collections || Map, List, Set are supported ||
 || JSON (JSONValue) || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback ||
