--- a/wiki/StandaloneGwtClient.wiki
+++ b/wiki/StandaloneGwtClient.wiki
@@ -35,22 +35,22 @@ This send method can invoke Mule endpoints or soafaces endpoints. For example wh
 The !UniversalClient `send` method lets you invoke virtually any method using a simple approach similar to that used by !MuleClient. Multiple arguments must be wrapped in an `Object[]` and passed as the payload. Here are the different options for passing parameters to a method or services using send:
 
 || *Supported Argument Types* || *Description* ||
-|| Void argument || Can call methods/services that take no arguments ||
-|| Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single argument ||
+|| Void argument || Can call methods/services that take no argumentss ||
+|| Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single arguments ||
 || !IsSeralizable || User defined types that support !IsSerializable ||
-|| Arrays (primitives) || Arrays of built in Java types (one and two dimensional arrays supported) ||
-|| Arrays !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
-|| Collections || Map, List, Set are supported ||
+|| Arrays (built-in types) || Arrays of built in Java types. One and two dimensional arrays supported. ||
+|| Arrays !IsSerializable || Arrays of !IsSeralizable. Only one dimensional arrays supported. ||
+|| Collections || Map, List, Set are supporteds ||
 || JSON (JSONObject) || Can pass any JSON object to server by wrapping in GWT JSONObject. On the server it will be converted to corresponding Java object and passed to the service or method being invoked. ||
-|| Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments. Any combination of the previous types shown in this table can be wrapped in Object[] ||
+|| Multiple arguments || A method that requires multiple arguments can use Object[] to wrap all the arguments. Any combination of the previous types shown in this table can be wrapped in Object[]. ||
 
 Types of that can be returned from a service call:
 
 || *Supported Return Types* || *Description* ||
-|| Void || Return Void ||
-|| Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single argument ||
+|| Void || Return type Void. Nothing returned. ||
+|| Built in Java types || For example String, Integer, primitives and any GWT supported serialized type can be sent as a single arguments. ||
 || !IsSeralizable || User defined types that support !IsSerializable ||
-|| Arrays (primitives) || Arrays of built in Java types (one and two dimensional arrays supported) ||
-|| Arrays !IsSerializable || Arrays of !IsSeralizable (only one dimensional arrays supported) ||
-|| Collections || Map, List, Set are supported ||
-|| JSON (JSONValue) || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback ||
+|| Arrays (built-in types) || Arrays of built in Java types. One and two dimensional arrays supported. ||
+|| Arrays !IsSerializable || Arrays of !IsSeralizable. Only one dimensional arrays supported. ||
+|| Collections || Map, List, Set are supporteds. ||
+|| JSON (JSONValue) || Return object from server will be converted to JSON and then represented as a JSONValue in GWT when pulled from the async callback. ||
